--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "graphql-mock": "0.0.3",
+    "graphql-tools": "^2.20.0",
     "jest": "^22.1.4",
     "jest-css-modules": "^1.1.0",
     "react-test-renderer": "^16.2.0",
