--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "coverage": "jest --coverage",
     "build": "webpack"
   },
-  "author": "",
+  "author": "Bing Wang",
   "license": "MIT",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.11",
     "apollo-client": "^2.0.4",
     "apollo-client-preset": "^1.0.6",
+    "apollo-link-http": "^1.5.3",
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.0",
     "css-loader": "^0.28.7",
@@ -41,22 +46,20 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
+    "unfetch": "^3.0.0",	
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.2"
   },
   "devDependencies": {
     "babel-jest": "^22.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "graphql-mock": "0.0.3",
     "graphql-tools": "^2.20.0",
     "jest": "^22.1.4",
     "jest-css-modules": "^1.1.0",
-    "react-test-renderer": "^16.2.0",
-    "unfetch": "^3.0.0"
+    "nodemon": "^1.17.2",
+    "react-test-renderer": "^16.2.0"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./setupTests.js",
