--- a/DockerfileApi
+++ b/DockerfileApi
@@ -3,10 +3,9 @@ ENV NODE_ENV production
 WORKDIR /usr/src/app
 COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
 RUN npm install --production --silent && mv node_modules ../
-# COPY ["webpack.config.js", "index.js", "./"]
-COPY ["index.js", "./"]
+# COPY ["webpack.config.js", "index.api.js", "./"]
+COPY ["index.api.js", "./"]
 COPY ./server server/
-COPY ./server-config.docker.json server/server-config.json
-EXPOSE 63002
+EXPOSE 80
 EXPOSE 27017
-CMD node index.js
+CMD node index.api.js
